# lshort

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package.json  sqlx-data.json
.cargo/: config.toml
.github/workflows/: deploy.yml  lint_format.yml  main.yml
config/: base.yaml  production.yaml
migrations/: 20221109184738_create_links_table.sql
src/: config.rs  lib.rs  main.rs  metrics.rs
src/routes/: global_404.rs  health_check.rs  mod.rs  new_link.rs  redirect.rs
web/: .env.production  index.html  package-lock.json  package.json  rome.json  tsconfig.json
web/components/: new_link.tsx
web/src/: App.tsx  main.tsx
web/src/components/: new_link.tsx
