[package]
name = "lshort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lshort"


[dependencies]
axum = "0.6.0-rc.2"
hyper = { version = "0.14.22", features = ["full"] }
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
