[package]
name = "lshort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lshort"


[dependencies]
axum = "0.6.1"
hyper = { version = "0.14.22", features = ["full"] }
metrics = "0.20.1"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
metrics-exporter-prometheus = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.22"
uuid = { version = "1.2.1", features = ["v4"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
serde_json = "1.0.87"
